# ipython-bench

./: .gitignore  README.md
data/: Cuprite.hdr
ipython/: calc_pi.py  calc_pi_dpex.py  gemm.py  nbody.py  nbody_dpex.py  nbody_prange.py  vca.py
python/: calc_pi.py  gemm.py  nbody.py  vca.py
sycl/: CMakeLists.txt
sycl/calc_pi/: CMakeLists.txt  calc_pi.cpp
sycl/gemm/: CMakeLists.txt  gemm.cpp
sycl/nbody/: CMakeLists.txt  nbody.cpp
sycl/vca/: CMakeLists.txt  vca.cpp
